gibbon-compiler/examples/error/test25a_withprint.gib
#lang gibbon

(require "../../ASTBenchmarks/grammar_racket.gib")


(let ([top : Toplvl (BeginTop (CONSTOPLVL (Expression (VARREF (quote hello)))
                                      (NULLTOPLVL)))])
  0)
